[gd_scene load_steps=10 format=3 uid="uid://c1cfiemc3hs70"]

[ext_resource type="Script" uid="uid://d366ywowgy78u" path="res://Scripts/Level/crate.gd" id="1_pxcwp"]
[ext_resource type="Texture2D" uid="uid://dskkpq3cc23gh" path="res://Assets/test_tileset.png" id="2_1lpdj"]
[ext_resource type="Script" uid="uid://dctkvbn0ljpx7" path="res://Scripts/Level/crate_activate_box.gd" id="3_71cc6"]

[sub_resource type="AtlasTexture" id="AtlasTexture_71cc6"]
atlas = ExtResource("2_1lpdj")
region = Rect2(80, 80, 16, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fey47"]
size = Vector2(3.5, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_0jqur"]
size = Vector2(4, 6)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_j573q"]
size = Vector2(6, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_2s70i"]
size = Vector2(6, 4)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_8lkp6"]
size = Vector2(4, 3)

[node name="Crate" type="Node2D"]
script = ExtResource("1_pxcwp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture_filter = 1
texture = SubResource("AtlasTexture_71cc6")

[node name="ActivateLeft" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_71cc6")
metadata/_custom_type_script = "uid://cpewc6ckirv3b"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateLeft"]
position = Vector2(-9.75, 0)
shape = SubResource("RectangleShape2D_fey47")

[node name="ActivateRight" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_71cc6")
metadata/_custom_type_script = "uid://cpewc6ckirv3b"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateRight"]
position = Vector2(10, 0)
shape = SubResource("RectangleShape2D_0jqur")

[node name="ActivateTop" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_71cc6")
metadata/_custom_type_script = "uid://cpewc6ckirv3b"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateTop"]
position = Vector2(0, -10)
shape = SubResource("RectangleShape2D_j573q")

[node name="ActivateBottom" type="Area2D" parent="."]
collision_layer = 2
collision_mask = 2
script = ExtResource("3_71cc6")
metadata/_custom_type_script = "uid://cpewc6ckirv3b"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ActivateBottom"]
position = Vector2(0, 10)
shape = SubResource("RectangleShape2D_2s70i")

[node name="IndentBoxPivot" type="Marker2D" parent="."]

[node name="IndentBox" type="Area2D" parent="IndentBoxPivot"]
collision_layer = 16
collision_mask = 16

[node name="CollisionShape2D" type="CollisionShape2D" parent="IndentBoxPivot/IndentBox"]
position = Vector2(0, -14)
shape = SubResource("RectangleShape2D_8lkp6")
